project(solver_app)
add_library(solver_app STATIC equation.cpp)
find_library(FORMATTER_LIB NAMES formatter PATHS ${CMAKE_CURRENT_SOURCE_DIR}/../build_formatter)
find_library(FORMATTER_EX_LIB NAMES formatter_ex PATHS ${CMAKE_CURRENT_SOURCE_DIR}/../build_formatter_ex)
find_library(SOLVER_LIB NAMES solver PATHS ${CMAKE_CURRENT_SOURCE_DIR}/../build_solver)
target_include_directories(solver_app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../formatter_ex_lib ${CMAKE_CURRENT_SOURCE_DIR}/../solver_lib)
target_link_libraries(solver_app PRIVATE ${SOLVER_LIB} ${FORMATTER_EX_LIB} ${FORMATTER_LIB})
